tests/rosetta/out/C/bioinformatics-global-alignment.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:40Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:40Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
char *padLeft(char *s, int w) {
  __auto_type res = "";
  __auto_type n = w - strlen(s);
  while (n > 0) {
    char *tmp1 = concat_string(res, " ");
    res = tmp1;
    n = n - 1;
  }
  char *tmp2 = concat_string(res, s);
  return tmp2;
}

int indexOfFrom(char *s, char *ch, int start) {
  __auto_type i = start;
  while (i < strlen(s)) {
    if ((strcmp(slice_string(s, i, i + 1), ch) == 0)) {
      return i;
    }
    i = i + 1;
  }
  return (-1);
}

int containsStr(char *s, char *sub) {
  __auto_type i = 0;
  __auto_type sl = strlen(s);
  __auto_type subl = strlen(sub);
  while (i <= sl - subl) {
    if ((strcmp(slice_string(s, i, i + subl), sub) == 0)) {
      return 1;
    }
    i = i + 1;
  }
  return 0;
}

list_string distinct(list_string slist) {
  list_string res = list_string_create(0);
  for (int tmp3 = 0; tmp3 < slist.len; tmp3++) {
    char *s = slist.data[tmp3];
    __auto_type found = 0;
    for (int tmp4 = 0; tmp4 < 0; tmp4++) {
      int r = res.data[tmp4];
      if ((r == s)) {
        found = 1;
        break;
      }
    }
    if ((!found)) {
      list_string tmp5 = list_string_create(1);
      tmp5.data[0] = s;
      list_string tmp6 = concat_list_string(res, tmp5);
      res = tmp6;
    }
  }
  return res;
}

int permutations(list_string xs) {
  if (xs.len <= 1) {
    list_int tmp7 = list_int_create(1);
    tmp7.data[0] = xs;
    return tmp7;
  }
  __auto_type i = 0;
  while (i < xs.len) {
    list_string rest = list_string_create(0);
    __auto_type j = 0;
    while (j < xs.len) {
      if (j != i) {
        list_string tmp8 = list_string_create(1);
        tmp8.data[0] = xs.data[j];
        list_string tmp9 = concat_list_string(rest, tmp8);
        rest = tmp9;
      }
      j = j + 1;
    }
    __auto_type subs = permutations(rest);
    for (int tmp10 = 0; tmp10 < subs.len; tmp10++) {
      list_string p = subs.data[tmp10];
      list_string perm = list_string_create(1);
      perm.data[0] = xs.data[i];
      __auto_type k = 0;
      while (k < p.len) {
        list_string tmp11 = list_string_create(1);
        tmp11.data[0] = p.data[k];
        list_string tmp12 = concat_list_string(perm, tmp11);
        perm = tmp12;
        k = k + 1;
      }
      res = 0;
    }
    i = i + 1;
  }
  return res;
}

int headTailOverlap(char *s1, char *s2) {
  __auto_type start = 0;
  while (1) {
    char *tmp13 = slice_string(s2, 0, 1);
    __auto_type ix = indexOfFrom(s1, tmp13, start);
    if (ix == 0 - 1) {
      return 0;
    }
    start = ix;
    if ((strcmp(slice_string(s2, 0, strlen(s1) - start),
                slice_string(s1, start, strlen(s1))) == 0)) {
      return strlen(s1) - start;
    }
    start = start + 1;
  }
}

list_string deduplicate(list_string slist) {
  __auto_type arr = distinct(slist);
  list_string filtered = list_string_create(0);
  __auto_type i = 0;
  while (i < arr.len) {
    __auto_type s1 = arr.data[i];
    __auto_type within = 0;
    __auto_type j = 0;
    while (j < arr.len) {
      if (j != i && containsStr(arr.data[j], s1)) {
        within = 1;
        break;
      }
      j = j + 1;
    }
    if ((!within)) {
      int tmp14_data[1];
      list_int tmp14 = {1, tmp14_data};
      tmp14.data[0] = s1;
      list_int tmp15 = concat_list_int(filtered, tmp14);
      filtered = tmp15;
    }
    i = i + 1;
  }
  return filtered;
}

char *joinAll(list_string ss) {
  __auto_type out = "";
  for (int tmp16 = 0; tmp16 < ss.len; tmp16++) {
    char *s = ss.data[tmp16];
    char *tmp17 = concat_string(out, s);
    out = tmp17;
  }
  return out;
}

char *shortestCommonSuperstring(list_string slist) {
  __auto_type ss = deduplicate(slist);
  __auto_type shortest = joinAll(ss);
  __auto_type perms = permutations(ss);
  __auto_type idx = 0;
  while (idx < perms.len) {
    __auto_type perm = perms.data[idx];
    __auto_type sup = perm.data[0];
    __auto_type i = 0;
    while (i < ss.len - 1) {
      __auto_type ov = headTailOverlap(perm.data[i], perm.data[i + 1]);
      char *tmp18 = concat_string(
          sup, slice_string(perm.data[i + 1], ov, strlen(perm.data[i + 1])));
      sup = tmp18;
      i = i + 1;
    }
    if (strlen(sup) < strlen(shortest)) {
      shortest = sup;
    }
    idx = idx + 1;
  }
  return shortest;
}

int printCounts(char *seq) {
  __auto_type a = 0;
  __auto_type c = 0;
  __auto_type g = 0;
  __auto_type t = 0;
  __auto_type i = 0;
  while (i < strlen(seq)) {
    __auto_type ch = slice_string(seq, i, i + 1);
    if ((strcmp(ch, "A") == 0)) {
      a = a + 1;
    } else {
      if ((strcmp(ch, "C") == 0)) {
        c = c + 1;
      } else {
        if ((strcmp(ch, "G") == 0)) {
          g = g + 1;
        } else {
          if ((strcmp(ch, "T") == 0)) {
            t = t + 1;
          }
        }
      }
    }
    i = i + 1;
  }
  __auto_type total = strlen(seq);
  char *tmp19 = concat_string("\nNucleotide counts for ", seq);
  char *tmp20 = concat_string(tmp19, ":\n");
  printf("%s\n", tmp20);
  char *tmp21 = _str(a);
  char *tmp22 = concat_string(padLeft("A", 10), padLeft(tmp21, 12));
  printf("%s\n", tmp22);
  char *tmp23 = _str(c);
  char *tmp24 = concat_string(padLeft("C", 10), padLeft(tmp23, 12));
  printf("%s\n", tmp24);
  char *tmp25 = _str(g);
  char *tmp26 = concat_string(padLeft("G", 10), padLeft(tmp25, 12));
  printf("%s\n", tmp26);
  char *tmp27 = _str(t);
  char *tmp28 = concat_string(padLeft("T", 10), padLeft(tmp27, 12));
  printf("%s\n", tmp28);
  char *tmp29 = _str(total - (a + c + g + t));
  char *tmp30 = concat_string(padLeft("Other", 10), padLeft(tmp29, 12));
  printf("%s\n", tmp30);
  printf("  ____________________\n");
  char *tmp31 = _str(total);
  char *tmp32 = concat_string(padLeft("Total length", 14), padLeft(tmp31, 8));
  printf("%s\n", tmp32);
}

int mochi_main() {
  list_string tmp33 = list_string_create(5);
  tmp33.data[0] = "TA";
  tmp33.data[1] = "AAG";
  tmp33.data[2] = "TA";
  tmp33.data[3] = "GAA";
  tmp33.data[4] = "TA";
  list_string tmp34 = list_string_create(4);
  tmp34.data[0] = "CATTAGGG";
  tmp34.data[1] = "ATTAG";
  tmp34.data[2] = "GGG";
  tmp34.data[3] = "TA";
  list_string tmp35 = list_string_create(3);
  tmp35.data[0] = "AAGAUGGA";
  tmp35.data[1] = "GGAGCGCAUC";
  tmp35.data[2] = "AUCGCAAUAAGGA";
  list_string tmp36 = list_string_create(13);
  tmp36.data[0] = "ATGAAATGGATGTTCTGAGTTGGTCAGTCCCAATGTGCGGGGTTTCTTTTAGTACGTCGG"
                  "GAGTGGTATTAT";
  tmp36.data[1] = "GGTCGATTCTGAGGACAAAGGTCAAGATGGAGCGCATCGAACGCAATAAGGATCATTTGA"
                  "TGGGACGTTTCGTCGACAAAGT";
  tmp36.data[2] = "CTATGTTCTTATGAAATGGATGTTCTGAGTTGGTCAGTCCCAATGTGCGGGGTTTCTTTT"
                  "AGTACGTCGGGAGTGGTATTATA";
  tmp36.data[3] = "TGCTTTCCAATTATGTAAGCGTTCCGAGACGGGGTGGTCGATTCTGAGGACAAAGGTCAA"
                  "GATGGAGCGCATC";
  tmp36.data[4] = "AACGCAATAAGGATCATTTGATGGGACGTTTCGTCGACAAAGTCTTGTTTCGAGAGTAAC"
                  "GGCTACCGTCTT";
  tmp36.data[5] = "GCGCATCGAACGCAATAAGGATCATTTGATGGGACGTTTCGTCGACAAAGTCTTGTTTCG"
                  "AGAGTAACGGCTACCGTC";
  tmp36.data[6] = "CGTTTCGTCGACAAAGTCTTGTTTCGAGAGTAACGGCTACCGTCTTCGATTCTGCTTATA"
                  "ACACTATGTTCT";
  tmp36.data[7] = "TGCTTTCCAATTATGTAAGCGTTCCGAGACGGGGTGGTCGATTCTGAGGACAAAGGTCAA"
                  "GATGGAGCGCATC";
  tmp36.data[8] = "CGTAAAAAATTACAACGTCCTTTGGCTATCTCTTAAACTCCTGCTAAATGCTCGTGC";
  tmp36.data[9] = "GATGGAGCGCATCGAACGCAATAAGGATCATTTGATGGGACGTTTCGTCGACAAAGTCTT"
                  "GTTTCGAGAGTAACGGCTACCGTCTTCGATT";
  tmp36.data[10] =
      "TTTCCAATTATGTAAGCGTTCCGAGACGGGGTGGTCGATTCTGAGGACAAAGGTCAAGATGGAGCGCATC";
  tmp36.data[11] = "CTATGTTCTTATGAAATGGATGTTCTGAGTTGGTCAGTCCCAATGTGCGGGGTTTCTTT"
                   "TAGTACGTCGGGAGTGGTATTATA";
  tmp36.data[12] = "TCTCTTAAACTCCTGCTAAATGCTCGTGCTTTCCAATTATGTAAGCGTTCCGAGACGGG"
                   "GTGGTCGATTCTGAGGACAAAGGTCAAGA";
  list_int tests_data[] = {tmp33, tmp34, tmp35, tmp36};
  list_list_int tests = {4, tests_data};
  for (int tmp37 = 0; tmp37 < tests.len; tmp37++) {
    list_string seqs = tests.data[tmp37];
    __auto_type scs = shortestCommonSuperstring(seqs);
    printCounts(scs);
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
